--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,22 @@
 
 html,
 body {
-  @apply bg-gradient-to-b from-cat-crust to-cat-surface2 text-cat-text min-h-screen;
-  font-family: theme("fontFamily.poppins");
+    @apply bg-cat-crust text-cat-text min-h-screen;
+    font-family: theme("fontFamily.poppins");
+}
+
+.jetbrains_font {
+    font-family: theme("fontFamily.jetbrains");
+}
+
+#photo {
+    position: relative;
+}
+
+.arrow_photo {
+    position: absolute;
+    top: 20%;
+    right: 98%;
+    width: 330px;
+    height: auto;
 }
